# AutoForgeNexus

./: .bandit  .editorconfig  .gitattributes  .gitignore  .gitmessage  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release-please-manifest.json  .safety-policy.json  .trufflehog-exclude.txt  .trufflehog_ignore  .trufflehog_regex_ignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  audit-ci.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  sonar-project.properties  tsconfig.json
.claude/: .env.example  .superclaude-metadata.json  README.md  development_guide.md  hooks.json  pr-template-generator.md  settings.json
.claude/agents/: 00.agent_list.md  01.system_architect_agent.md  02.domain_modeller_agent.md  03.api_designer_agent.md  04.prompt_engineering_specialist_agent.md  05.llm_integration_agent.md  06.evaluation_engine_agent.md  07.workflow_orchestrator_agent.md  08.uiux_designer_agent.md  09.frontend_architect_agent.md  10.real-time_features_specialist_agent.md  11.backend_developer_agent.md  12.database_administrator_agent.md  13.vector_database_specialist_agent.md  14.event-bus_manager_agent.md  15.edge_computing_specialist_agent.md  16.security_architect_agent.md  17.performance_optimizer_agent.md  18.observability_engineer_agent.md  19.test_automation_engineer_agent.md  20.product_manager_agent.md  21.technical_documentation_agent.md  22.devOps_coordinator_agent.md  23.data_migration_specialist_agent.md  24.compliance_officer_agent.md  25.cost_optimization_agent.md  26.user_research_agent.md  27.data_analyst_agent.md  28.site_reliability_engineering_agent.md  29.qa_coordinator_agent.md  30.version-control-specialist.md
.claude/core/: DOMAIN_CONTEXT.md  EVENT_CONTRACTS.md  FLAGS.md  PRINCIPLES.md  QUALITY_GATES.md  RULES.md
.claude/hooks/: auto_commit_pr.sh  create_pull_request.py  (+3 more)
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: CODEOWNERS  PR_TEMPLATE_SECURITY.md  SECURITY.md  claude-review.yml  dependabot.yml  labeler.yml  pull_request_template.md
.husky/: pre-commit  pre-push
.serena/: project.yml
backend/: .bandit  .dockerignore  .env.example  .env.production.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  cf-requirements.txt  pyproject.toml  requirements-dev-hashed.txt  requirements-dev.txt  requirements.txt  test_turso_connection.py  wrangler.toml
backend/alembic/: env.py
backend/alembic/versions/: fbaa8f944a75_initial_schema_prompts_and_evaluations_.py
backend/docs/deployment/: step1_github_actions_log_analysis.md
backend/docs/reports/: codeql-alert5-comprehensive-implementation-2025-10-08.md
backend/docs/reviews/: codeql-url-sanitization-security-fix-2025-10-08.md  comprehensive-codeql-alert5-security-review-2025-10-08.md  security-architecture-review-codeql-alert5-2025-10-08.md
backend/migrations/: env.py
backend/scripts/: create_test_tables.sql  docker-entrypoint.sh  setup_turso.sh  test_database_connection.py
backend/src/: __init__.py  main.py  monitoring.py
backend/src/application/: __init__.py
backend/src/application/prompt/: __init__.py
backend/src/application/prompt/dto/: __init__.py
backend/src/application/prompt/services/: __init__.py
backend/src/core/: __init__.py
backend/src/core/cloudflare/: jwt_verification.py  retry.py  settings.py
backend/src/core/config/: __init__.py  settings.py
backend/src/core/logging/: sanitizer.py
backend/src/core/security/validation/: README.md  __init__.py  url_validator.py  url_validator_examples.py  url_validator_unified.py
backend/src/domain/prompt/: __init__.py
backend/src/domain/prompt/entities/: __init__.py  prompt.py
backend/src/domain/prompt/events/: __init__.py  prompt_created.py  prompt_saved.py  prompt_updated.py
backend/src/domain/prompt/services/: __init__.py  prompt_generation_service.py
backend/src/domain/prompt/value_objects/: __init__.py  prompt_content.py  prompt_metadata.py  user_input.py
backend/src/domain/shared/events/: __init__.py  domain_event.py  event_bus.py  event_store.py  infrastructure_events.py
backend/src/infrastructure/shared/database/: base.py  turso_connection.py
backend/src/middleware/: observability.py
backend/src/presentation/api/shared/: __init__.py  health.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py
backend/tests/integration/api/: __init__.py  test_health.py
backend/tests/integration/database/: README.md  test_database_connection.py
backend/tests/unit/: test_config.py  test_main.py  test_monitoring.py
backend/tests/unit/core/logging/: __init__.py  test_sanitizer.py
backend/tests/unit/core/security/validation/: test_url_validator.py
backend/tests/unit/domain/: __init__.py
backend/tests/unit/domain/prompt/: __init__.py
backend/tests/unit/domain/prompt/entities/: __init__.py  test_prompt.py
backend/tests/unit/domain/prompt/events/: test_prompt_events.py
backend/tests/unit/domain/prompt/services/: __init__.py  test_prompt_generation_service.py
backend/tests/unit/domain/prompt/value_objects/: __init__.py  test_value_objects.py
backend/tests/unit/domain/shared/events/: test_domain_event.py  test_event_bus.py  test_event_store.py  test_infrastructure_events.py
backend/tests/unit/infrastructure/shared/database/: test_turso_connection_events.py
claudedocs/: edge-computing-devops-practices.md
docs/: CI_CD_OPTIMIZATION_SUMMARY.md  CLAUDE.md  README.md
document/: 技術スタック.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile.dev  README.md  eslint.config.mjs  jest.config.js  jest.config.mjs  jest.integration.setup.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
infrastructure/: CLAUDE.md
scripts/: check-environment.sh  fix-pr-title.sh  migrate_env.sh  setup-branch-protection.sh  verify-secrets.sh
(+361 files in other folders)
